style: fix ui color contrast

--- a/global.css
+++ b/global.css
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  color: #333;
+  color: rgb(39, 33, 33);
   margin: 0;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -46,11 +46,12 @@ textarea {
 }
 
 input:disabled {
-  color: #ccc;
+  color: #2d4258;
+  /* was #ccc */
 }
 
 body {
-  background-color: #282c34;
+  background-color: #0c1120fd;
 }
 
 .app {
@@ -59,29 +60,12 @@ body {
   margin: 0 auto;
 }
 
-header {
-  background-color: #181717;
-  height: 10vh;
-  min-height: 50px;
-  color: white;
-  position: fixed;
-  width: 100%;
-  max-width: 728px;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  z-index: 99;
-  padding: 10px;
-  box-sizing: border-box;
-}
-
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
-  background-color: rgb(40, 37, 53);
+  background-color: #0f172b;
 }
 
 main {
@@ -96,18 +80,21 @@ main::-webkit-scrollbar {
 }
 
 main::-webkit-scrollbar-track {
-  background: #1e1e24;
+  /* background: #1b1b22; */
+  /* background: #0f172a; */
+  background: rgb(203 213 225/0.1);
 }
 
 main::-webkit-scrollbar-thumb {
-  background: #6649b8;
+  /* background: #7dd3fc; */
+  background: #7dd3fc;
 }
 
 form {
   height: 8vh;
   position: fixed;
   bottom: 0;
-  background-color: rgb(24, 23, 23);
+  background-color: rgb(34, 8, 8);
   width: 100%;
   max-width: 728px;
   display: flex;
@@ -116,19 +103,24 @@ form {
 
 form button {
   width: 20%;
-  background-color: rgb(72, 207, 79);
+  background-color: #7dd3fc;
 }
 
 input {
   line-height: 1.5;
   width: 100%;
   font-size: 1.5rem;
-  background: rgb(58, 58, 58);
-  color: white;
+  /* background: #2d4258; */
+  background-color: #1e293b;
+  color: #e2e8f0;
   outline: none;
   border: none;
   padding: 0 10px;
   margin: 0;
+}
+
+input::placeholder {
+  color: #cbd5e1;
 }
 
 button {
@@ -193,13 +185,14 @@ p {
 
 .sent p {
   color: white;
-  background: #0b93f6;
+  background: #3b82f6;
   align-self: flex-end;
   text-align: right;
 }
 .received p {
-  background: #e5e5ea;
-  color: black;
+  /* background: #e5e5ea; */
+  background: #1e293b;
+  color: #cbd5e1;
   text-align: left;
 }
 
@@ -231,11 +224,6 @@ img {
   margin-bottom: 20px;
 }
 
-.user-bio {
-  display: flex;
-  align-items: center;
-}
-
 .scroll-button {
   position: fixed;
   bottom: 70px;
@@ -245,9 +233,4 @@ img {
 
 .red {
   background: rgb(204, 53, 37);
-}
-
-.signout-button {
-  font-size: 0.8rem;
-  padding: 0.5rem 1rem;
 }
